--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ a {
 span {
     font-weight: 600;
     font-size: 15px;
+    color: gold;
 }
 
 p {
     display: inline-block;
-    color: green;
+    color:white;
     font-size: 20px;
     margin-left: 5px;
 }
@@ -43,7 +44,7 @@ h4 {
     max-width: 1000px;
     margin: 10px auto;
     border: 2px solid black;
-    background-color: rgb(160, 148, 148);
+    background-color: rgb(7, 7, 7);
     padding: 10px;
 }
 
